# konference-svn

konference/: ChangeLog  TODO  config.h.in  configure.in.in  konference.kdevelop
konference/src/: Makefile.am  dcopiface.h  konference.cpp  konference.kcfg  konferenceUI_base.ui  konference_part.cpp  konference_part.h  konference_part.rc  konferenceui.cpp  konferenceui.h  main.cpp  videowidget.cpp  webcam.cpp  webcam.h  webcam_new.cpp  webcam_old.cpp
konference/src/audio/: Makefile.am  alsa.cpp  alsa.h  audiobase.cpp  audiobase.h  oss.cpp  oss.h
konference/src/codecs/: Makefile.am  codecbase.cpp  codecbase.h  g711.h  gsmcodec.h  h263.cpp  h263.h  speexcodec.cpp  speexcodec.h
konference/src/dialogs/: .cvsignore
konference/src/dialogs/config/: .cvsignore  configaudiodlg.cpp  configaudiodlglayout.ui  configvideodlg.cpp  configvideodlg.h  configvideodlglayout.ui
konference/src/dialogs/wizard/: .cvsignore  Makefile.am  page2.cpp  page2layout.ui  page3.cpp  page3.h  page3layout.ui  page4.cpp  page4.h  page4layout.ui  summary.ui  wizard.cpp  wizard.h
konference/src/rtp/: Makefile.am  jitter.cpp  jitter.h  rtp.cpp  rtp.h  rtpaudio.cpp  rtpaudio.h  rtpbase.cpp  rtpbase.h  rtpevent.h  rtplistener.cpp  rtplistener.h  rtpvideo.cpp  rtpvideo.h
konference/src/rtp/jrtplib/: Makefile.am  rtpconfig_unix.h  rtppacket.h
konference/src/sip/: Makefile.am  definitions.h  sipcall.cpp  sipcall.h  sipcallid.cpp  sipcallid.h  sipcontainer.cpp  sipcontainer.h  sipfsm.cpp  sipfsm.h  sipfsmbase.cpp  sipfsmbase.h  sipmsg.cpp  sipmsg.h  sipregistration.cpp  sipregistration.h  sipsdp.cpp  sipsdp.h  sipthread.cpp  sipthread.h  sipurl.cpp  sipurl.h  sipxpidf.cpp  sipxpidf.h
konference/src/video/: Makefile.am  webcam.cpp  webcam.h  webcam_new.h  webcambase.cpp  webcambase.h  webcamimage.cpp  webcamv4l.cpp  webcamv4l.h
konference/templates/: cpp
