INCLUDES = -I$(top_srcdir)/src $(all_includes) $(KONFERENCE_INCLUDES)
METASOURCES = AUTO
libwizard_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES =  libwizard.la
libwizard_la_SOURCES = wizard.cpp page1layout.ui page1.cpp page2layout.ui \
		page2.cpp page3layout.ui page4layout.ui page3.cpp page4.cpp summary.ui
noinst_HEADERS = wizard.h page1.h page2.h page3.h page4.h
